--- a/tomcat/handlers/main.yml
+++ b/tomcat/handlers/main.yml
@@ -1,2 +1,8 @@
 ---
 # handlers file for tomcat
+- name: start tomcat service
+  ansible.builtin.service:
+    name: "{{ tomcat_user }}"
+    enabled: true
+    state: restarted
+
